# smarthome-backend-2

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md
.github/workflows/: ci.yml
database/: init.sql
docker/: docker-compose.yml
src/: main.cpp
tests/: test_main.py
